# commonforms

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
commonforms/: __init__.py  __main__.py  exceptions.py  form_creator.py  inference.py  utils.py
tests/: inference_test.py
