[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commonforms"
version = "0.1.1"
description = "Automatically convert a PDF into a fillable form"
readme = "README.md"
requires-python = ">=3.12"
urls = { Homepage = "https://github.com/jbarrow/commonforms" }
dependencies = [
    "formalpdf==0.1.5",
    "pillow>=11.3.0",
    "pydantic>=2.11.9",
    "pypdf>=6.1.1",
    "ultralytics>=8.3.204",
]

[project.scripts]
commonforms = "commonforms:main"

[tool.setuptools]
packages = ["commonforms"]

[tool.setuptools.package-data]
commonforms = ["models/*.pt"]
